src/Routes/Navbar/Nav.css
body{
    background-color: antiquewhite;
}
.navContainer{
    width: 90%;
  
    margin: 0 auto;

    background-color: transparent;

    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;

}


.Logo{
    width: 250px;
    height: 100px;
}


.Menus{
    display: none;
}
.navLinks ul{
    display: flex;
  
    gap: 34px;
    list-style: none;
    text-decoration: none;
    color: black;
}
.navLinks ul li {
    color: white;
}
.Nav-link {
    text-decoration: none;
    color: inherit;
  }

  .serviceLinks {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 70%;
   width: 200px;
    background-color: darkcyan; 
   
    font-size: 1rem;



  }
  
  .serviceItem {
  
    border-radius: 5px;
    display: flex;
 
    text-align: left;
    width: 100%;
}

.signOut{
  height: 23px;
  background-color: darkred;
  color: white;
  
  border: none;
}
@media (max-width:741px){
    .navLogo{
        width: 100%;
        display: flex;
        justify-content: space-between;
       
       
    }
    .navContainer{
     margin: 0;
     width: 100%;

   /* padding: 15px 15px 0px 15px;*/  
    }

    .Logo{

        width: 150px;
    }
    
    .Menus{
        display: block;
        width: 40px;
        cursor: pointer;
        right: 0;
    }
    .navLinks{
   
        position: absolute;
        top: 100%;
        right: 0%;
  
        background-color: black;
        transition: right 0.3s ease-in-out;
        right: -110%;
        display: none;
        z-index: 99;
    }

    .openMenu{
        z-index: 99;
        right: 0%;
        display: block;
    }

    .serviceItem {
      margin: 0;
      padding: 0;
    }
    
    .openMenu .serviceLinks {
        display: flex; 
        flex-direction: column; 
        position: relative;
        width: 100%;
        align-items:flex-start;
        background-color: transparent;
        padding-top: 15px;
        
    }

    .navLinks ul{
        flex-direction: column;
        right: 0;
    }
}

